chore: update TPs